--- a/CS지식의정석/네트워크/01. 네트워크기초.md
+++ b/CS지식의정석/네트워크/01. 네트워크기초.md
@@ -28,3 +28,8 @@
 ## 지연 시간
 
 요청이 처리되는 시간을 말함, 어떤 메시지가 두 장치 사이를 왕복하는 데 걸린 시간
+
+## RTT (Round Trip Time)
+
+신호 전송, 수신확인에 걸린 시간을 더한 값, 두 장치 사이를 왕복하는게 걸린 시간
+
