--- a/CS지식의정석/네트워크/01. 네트워크기초.md
+++ b/CS지식의정석/네트워크/01. 네트워크기초.md
@@ -6,30 +6,42 @@
 
 링크 : 유선 또는 무선(와이파이LAN)
 
-## 처리량
+ex) naver.com 요청시,
 
-링크내의 흐르는 데이터 양을 말함, 얼마만큼의 트래픽을 처리했는지 나타냄
+Node : 핸드폰, 네이버서버
 
-단위 : bps(bits per second) 초당 전송, 수신 비트수 처리량
-
+link : 노드간 중간 연결
 
 ## 트래픽
 
-네트워크 장치간 대역폭, 네트워크 중간 에러, 장치의 하드웨어 스펙에 영향 받는다.
+특정시점에 링크 내에 흐르는 데이터의 양
 
-링크 내 흐르는 데이터의 양, 서버에 저장된 파일을 클라이언트가 다운로드 시 발생되는 데이터의 누적량
+클라이언트가 요청하는 데이터의 누적량
+
+트래픽 많아짐 -> 흐르는 데이터가 많아짐
+
+처리량 많아짐 -> 처리 트래픽이 많아짐
+
+단위 : bps(bits per second)
+
+## 처리량
+
+링크 내에게 성공적으로 전달된 데이터의 양
+
+많은 트래픽 -> 많은 처리량을 가짐
+
+단위 : bps
 
 ## 대역폭
 
-주어진 시간 동안 네트워크 연결 통해 흐를 수 있는 최대 비트 수
+주어진 시간 동안 네트워크 연결을 통해 흐를 수 있는 최대 비트 수를 의미
 
-네트워크에서 전송되는 데이터 범위로 허용 할 수 있는 동시 접속자 수와 같은 의미
+최대 동시 접속자수 유추의 척도가 됨
 
-## 지연 시간
+## RTT(Round Trip Time : 왕복 지연 시간)
 
-요청이 처리되는 시간을 말함, 어떤 메시지가 두 장치 사이를 왕복하는 데 걸린 시간
+신호를 전송, 해당 신호의 수신 확인에 걸린 시간을 더한 값
 
-## RTT (Round Trip Time)
+어떤 메시지가 두 장치 사이를 왕복 하는데 걸린 시간
 
-신호 전송, 수신확인에 걸린 시간을 더한 값, 두 장치 사이를 왕복하는게 걸린 시간
-
+테스트 방법 : ping
