Update 02. 네트워크 토폴로지와 병목 현상.md

--- a/CS지식의정석/네트워크/02. 네트워크 토폴로지와 병목 현상.md
+++ b/CS지식의정석/네트워크/02. 네트워크 토폴로지와 병목 현상.md
@@ -1,27 +1,67 @@
+# 네트워크 토폴로지 : 버스, 스타 트리
+
 ## 네트워크 토폴로지
 
-- 트리 토폴로지 : 계층형 토폴로지, 트리 형태로 배치한 네트워크
+- 노드와 링크가 어떻게 구성되어있는지를 의미
 
-- 버트 토폴로지 : 중앙 통신 회선 하나에 여러 노드 연결, 근거리 통신망에 사용, 신뢰성 우수, 노드 추가 삭제 쉬움 단, 스푸핑 가능성 있음
+## 버스 토폴로지
 
-- 스푸핑 : 특정 노드에서 패킷을 가로 채는 행위
+- 하나의 회선에 여러개의 노드
 
-- 스타 토폴로지 : 중앙 노드 에 모두 연결된 네트워크 구성상호 에러 탐지 쉬움, 단, 노드 장애시 전체 장애 우려 고가의 장비
+- 노드 추가, 삭제 쉬움
 
-- 링형 토폴로지 : 각 노드가 양옆의 두노드와 연결 고리처럼 연속하여 연결된 망 
+- 설치비용 적음
 
-  구성 방식 노드 수가 증가되어도 네트워크상 손실이 거의 없음 
-  
-  충돌이 발생되는 가능석이 적음,
+### 장점
 
-  고장 쉽게 발견, 네트워크 구성 변경이 어려움, 회선 장애 발생시, 전체 네트워크 영향을 끼침
+- 소규모 네트워크 구축이 쉬움
 
-- 메시 토폴로지 : 망형 토폴로지, 그물망 처럼 연결 장애 발생시에도 여러 경로로 네트워크 계속 사용, 
+- 한 노드에 장애 발생해도 다른 노드에 영향 없음
 
-  트래픽도 분산처리가 가능 
-  
-  단, 노드 추가가 어렵고 구축 어려움
+### 단점
 
-## 병목 현상
+- 메인 링크에 많은 트래픽, 정체현상 발생 가능성이 높음
 
-전체 시스템의 성능이나 용량이 하나의 구성요소에 한해 제한을 받는 현상을 말함
+- 메인링크 장애시 전체 시스템 문제 발생
+
+## 스타 토폴로지
+
+- 중앙에 있는 노드를 기반으로 연결된 형태
+
+- 노드 추가, 삭제 쉬움
+
+### 장점
+
+- 중앙노드가 아닌 노드에 장애 발생해도 다른 노드 영향 X
+
+- 안정성이 높음, 한노드 침해 발생시 다른 노드로 침해확장이 어려움, 무조건 중앙 노드 거쳐야함
+
+- 한노드에 문제 생겨도 다른 노드에는 영향이 없음
+
+### 단점
+
+- 중앙 노드 에러시 큰 문제
+
+## 트리 토폴로지
+
+- 트리 형태(계층적 토폴로지)
+
+- 노드 추가, 삭제 보통
+
+- 버스 토폴로지와 스타 토폴로지의 하이브리도 형태
+
+### 장점
+
+- 노드 확장이 용이(주로 리프노드로 확장)
+
+- 리프노드의 에러는 나머지 부분에 영향을 미치지 않음
+
+### 단점
+
+- 특정 노드 트래픽 집중 시 하위 노드에 영향
+
+- 루트 노드에 문제가 생기면 전체 네트워크에 큰 문제
+
+### 백본케이블
+
+- 여러 소형 네트워크들을 묶어 대규모 파이프라인을 통해 극도로 높은 대역폭으로 다른 네트워크들의 집합과 연결 되는 네트워크
