Update 08. TCP_IP 4계층 전송계층 TCP, UDP.md

--- a/CS지식의정석/네트워크/08. TCP_IP 4계층 전송계층 TCP, UDP.md
+++ b/CS지식의정석/네트워크/08. TCP_IP 4계층 전송계층 TCP, UDP.md
@@ -14,3 +14,5 @@
 
 - 오류검사는 단순한 체크섬만 지원
 - 헤더 : 32 비트(8바이트) 고정
+
+![image](https://user-images.githubusercontent.com/60064392/202834279-1c5543c1-889c-4481-a490-1056b4065805.png)
