--- a/CS지식의정석/네트워크/14. 라우팅테이블.md
+++ b/CS지식의정석/네트워크/14. 라우팅테이블.md
@@ -21,3 +21,16 @@
     - 동일한 라우팅 테이블 요소가 2개 있을 때, 이 값이 낮은 요소가선택 된다.
 
 **매트릭은 일반적인 홉 수(hop count)가 들어가며 지연시간, 처리량 등이 들어갈 수 있습니다.**
+
+### 게이트웨이
+
+- 프로토콜 변환기, 네트워크와 네트워크를 잇는 장치
+
+- 라우터와 하는 기능 자체가 비슷
+
+### 홉
+- 홉(hop)은 네트워크에서 출발지와 목적지 사이에 위치한 장치 의미
+
+- 홉 카운트는 데이터가 출발지와 목적지 사이에서 통과해야하는 홉의 개수를 의미함
+
+- 라우팅을 홉바이홉통신이라고도 한다.
