Update 20. 공인(public)IP와 사설(private) IP.md

--- a/CS지식의정석/네트워크/20. 공인(public)IP와 사설(private) IP.md
+++ b/CS지식의정석/네트워크/20. 공인(public)IP와 사설(private) IP.md
@@ -1,4 +1,4 @@
-### 공인(public)IP와 사설(private) IP
+# 공인(public)IP와 사설(private) IP
 
 - IP 주소의 부족을 공인IP(public ip)와 사설IP(private IP)로 나누고  
   중간에 NAT라는 기술을 통해 해결한다
