--- a/자바의신/5장-계산을 하고싶어.md
+++ b/자바의신/5장-계산을 하고싶어.md
@@ -1,21 +1,50 @@
 값을 할당할 때 사용하는 연산자의 기호는?
 
-기본적인 덧셈 뺄센 곱셈 나눗셈, 나머지를 계산하럐 사용하는 연산자 기호
+- + 기호
+
+기본적인 덧셈 뺄센 곱셈 나눗셈, 나머지를 계산하는데 사용하는 연산자 기호
+
+- -, *, /, %
 
 +=는 무엇을 할때 사용하는 연산자?
 
+- 복합 대입 연산자
+
 연산 순서를 확실히, 또는 모를떄 사용하는 기호
+
+- 소괄호
 
 ==와 !=의 차이
 
+- 동등 연산자 동등 할때 
+
 < 와 <= 의 차이
+
+- 포함과 미포함
 
 ! 연산자는 어떤 타입에 사용하나?
 
+- boolean
+
 ? : 로 표시하는 삼항 연산자의 ?와 : 뒤에 명시해 주는 값은 무엇을 의미?
 
+- ? 는 조건, 참일때 : 거짓일떄
+
 자바는 형 변환을 한다고 했는데, short의 값을 long에 할당 할 때에는 어떤것을 해 주어야 하나?
+```
+  short s1 = 20;
+  long l1 = s1;
+```
 
 long 값을 short에 할당 할떄 어떤것을 해주어야 하나?
+```
+  long l = 1000000L;
+  short s = (short) l;
+```
 
 9와 10의 경우중 어떤 경우가 기존 값이 사라지고 엉뚱한 값으로 바뀌는가?
+
+- short (정수형) 데이터의 할당크기 : 2byte -32768~32767 
+- long (정수형) 데이터의 할당크기 : 8byte -922372036854775808~9223372036854775807 
+
+- 10에만 엉뚱한 값으로 바뀜
