--- a/자바의신/6장-제가 조건을 좀 따져요.md
+++ b/자바의신/6장-제가 조건을 좀 따져요.md
@@ -1,1 +1,54 @@
+if 문장의 소괄호 안에는 어떤 형태의 결과가 제공 되어야하나?
 
+- boolean (true/false)
+
+if 조건에 맞지 않는 모든 경우를 처리 할때, 사용하는 예약어는 뭔가?
+
+- else 
+
+switch 를 사용할 수 있는 기본 자료형의 타입에는 어떤 것들이 있나?
+
+- 실수형 외에 모든 기본 자료형
+
+switch 블록 안에서 비교 대상값 앞ㅇ에 사용하는 예약어는 무엇인가?
+
+- case : 
+
+switch 조건을 빠져나가도록 하는 예약어는 무엇니가요?
+
+- break;
+
+switch 조건들에 맞지 않을때 기본 처리를 하기 위한 예약어는 무엇니가?
+
+- default : 
+
+while 문의 소괄호 안에는 어떤 형태의 결과가 제공 되어야하나?
+
+- boolean(true/false)
+
+while 문을 무조건 한번은 실행하게 하려면 어떻게 해야하나?
+
+- do-while 문을 사용.
+
+```
+do {
+    console.log(i)
+    i++
+} while(i <= 10);
+```
+
+while 문을 마음대로 빠져나가게 하려면 어떤 예약어를 사용하면 되나요?
+
+- break;
+
+for 루프의 소괄호 안의 가장 첫 구문(첫 세미콜론 앞의 문자)은 for 로프가 수행되는 동안 몇번 수행되나요?
+
+- 1번
+
+for 루프의 소괄호 안의 중간에 있는 구문은 어떤 타입의 결과가 제공 되어야하나요?
+
+- boolean (true/false) 로 for문 중단할지 계속할지 판단.
+
+for 루프의 소괄호 안의 마지막에 있는 구문에서는 어떤 작업을 수행하나요?
+
+- 횟수 증감 작업
