--- a/자바의신/18정-배운것들 정리.md
+++ b/자바의신/18정-배운것들 정리.md
@@ -94,25 +94,117 @@ for (int i = 0; i < 5; i++) {
 
 생성자는 무엇을 하는데 사용? 별도로 만들지 않아도 자동으로 생성되는 생성자에 대해 정리
 
+- 생성자는 객체를 초기화 또는 생성하는데 사용한다. 선언하지 않을 시, default 생성자가 자동으로 생성됨.
+
 Overloading은 무엇인가? public void setData(int a)라는 메소드를 원하는대로 Overloading해라
 
+- Overloading은 확장의 개념으로 매개변수의 갯수 또는 종류가 다름.
+```
+public void setData(int a, int b){
+
+}
+```
+
 패키지를 선언하는 위치와 이름을 지정할때 유의점
+
+- package 예약어 사용, 위치는 java파일의 맨 윗줄 위치, 패키지 명에는 java라는 문자를 사용할수 없음.  
+  ex) package java.lang.*;
 
 다른 패키지에 선언된 클래스를 사용하기 위한 import는 어디 위치에 선언해야하며, static import는
 우엇인지 정리
 
+- import는 class 위에 선언한다. 
+- static import는 클래스 내에 static 메소드 사용하듯이 사용할 수있다.
+```
+import static java.lang.Math.PI;
+
+System.out.println(PI);
+
+```
+- 클래스 내에 동일한 이름의 메소드가 있으면 클래스 자신의 메소드가 우선한다.
+
 클래스란 무엇인가? 를 다음 단어들이 포함되는 문자으로 작성, 주어진 단어의 의미도 같이 정리(속성, 상태)
+
+- 클래스는 자바의 최소요소로 속성과 상태를 가지고 있다.
+- 속성은 class 의 선언된 변수를 의미
+- 상태는 class 의 선언된 메소드를 의미한다.
 
 인터페이스, abstract 클래스, 클래스, Enum 클래스가 있는데 각각의 특징 및 다른점 정리
 
+- 인터페이스 
+  java 파일에 interface 예약어를 사용해서 선언하며, body를 구현하지 않는다(구현시 에러발생) 
+  구현부는 implements 예약어를 통해 interface file를 연결하여 구현한다.
+  
+- abstract 클래스
+  java 파일에 abstract 예약을 사용해서 선언한며, body를 구현할 수 있다. 
+  파일에 abstract 메소드가 하나라도 있을시, abstract로 선언해야한다.
+  구현 및 상속은 extends 라는 예약어를 통해 파일을 연결 한다.
+  공통 기능 미리 구현시 주로 사용한다.
+  
+- 클래스
+  기본적인 java파일에 선언되는것. 속성과, 행위를 가지고 있으며, 객체를 정의 할 수 있다.
+  그리고 행위에 해당하는 메소드는 무조건 구현부를 가지고 있어야한다.
+
+- Enum 클래스 
+  Enum 클래스는 하위 내용처럼 선언되며, 해당 변수 값에 값을 할당할 수 있다.
+```
+public enum Week {
+    MONDAY("monday","월"),
+    TUESDAY("tuesday","화"),
+    WEDNESDAY("wednesday","수"),
+    THURSDAY("thursday","목"),
+    FRIDAY("friday","금"),
+    SATURDAY("saturday","토"),
+    SUNDAY("sunday","일");
+
+    private final String label;
+    private final String value;
+
+    Week(String label, String value) {
+        this.label = label;
+        this.value = value;
+    }
+
+    public String getLabel() {
+        return this.label;
+    }
+
+    public String getValue() {
+        return value;
+    }
+}
+```
+
 instanceof 라는 연산자의 용도를 정리
+
+- 객체의 타입이 같은지 판단 하는 것
+  자식 객체 instanceof 부모 타입 -> true
+  부모 객체 instanceof 자식 타입 -> false
+  객체 instanceof 객체 타입 -> true
 
 어떤 클래스를 상속 받아 확장하면 부모 클래스의 어떤 것 들을 사용할 수 있는지 정리
 
+- 부모 클래스의 변수 또는 메소드를 Override 하거나 새로운 값을 할당 할 수 있다. 
+
 변수 final로 선언 하는 것이 어떤 의미가 있는지 정리
+
+- 해당 변수에 할당한 값을 수정 할수 없다.  
+  단, 참조 변수 일 경우에 변수의 내부 변수가 final로 선언 되어있지 않은 경우, 변경 할수 있다.
 
 클래스를 final로 선언하는것이 어떤의미 인지 정리
 
+- final 키워드를 클래스에 붙이면 상속 불가능 클래스
+
 변수를 static으로 선언하는것이 어떤 의미인지 정리
 
+- 메서드에 final을 붙이면 override를 제한
+
 try-catch-finally 블록은 왜 사용하고 각각의 블록이 어떤 용도로 사용되는지 정리
+
+- try-catch-finally 은 예외가 발생되더라도 프로그램상에서 문제가 없도록 하기 위해서 사용.
+
+- try 부분은 예외가 발생할 수도 있는 부분이라는것을 의미
+
+- catch 부분은 예외 발생시, 예외가 처리하는 로직을 넣는 부분
+
+- finally 예외가 발생하던 안하던 무조건 한번은 수행하도록 하는 부분
