Update 26장 파일에 있는 것을 읽고 쓰려면 아이오를 알아야죠.md

--- a/자바의신/26장 파일에 있는 것을 읽고 쓰려면 아이오를 알아야죠.md
+++ b/자바의신/26장 파일에 있는 것을 읽고 쓰려면 아이오를 알아야죠.md
@@ -50,3 +50,7 @@ BufferedReader나 BufferedWriter를 사용하는 이유는 무엇?
 2. 메모리를 적게 먹는다.
 3. 속도가 다른 Reader나 Writer에 비해 빠르다
 파일을 읽고 문자열을 처리하기 위해서 필요한 Scanner 클래스가 속해있는 패키지
+
+Scanner 클래스가 속한 패키지 
+
+- java.util 패키지
