--- a/자바의신/29장-기말고사.md
+++ b/자바의신/29장-기말고사.md
@@ -1,41 +1,195 @@
 String 클래스와 StringBuilder, StringBuffer클래스의 차이 정리
 
+- 차이 : String 클래스는 불변 객체로, 선언 할떄마다 메모리에 String 객체가 지속적으로 생성
+- StringBuilder와 StringBuffer는 하나의 가변 객체에 문자열 pool에 등록된 문자열을 참조하여 생성한다.
+
 String 클래스의 indexOf(), substring(), split(), getByte() 메소드가 어떤 용도로 사용하는지 정리
+
+- indexOf() : 문자열에 포함된 단어 또는 문자를 찾기 위해 서용,  
+  return 값은 int형으로 없으면 -1리턴, 있으면 해당 문자 또는 단어의 위치를 return한다.
+
+- substring() : 문자열을 startIndex와 endIndex를 선정하여 잘라낸다.
+
+- split() : 문자열을 파라미터 기준으로 나눠 List로 만든다.
 
 System 클래스의 주요 용도
 
+- 표준 입출력 관리와, 환경 변수 접근, 시스템 속성 , 현재 ms / ns 시각 확인 , 객체 복사 등에 사용된다.
+
 System 클래스에서 여러분들의 절대로 사용해서는 안되는 메소드들은 무엇이고, 그 이유를 정리
+
+- System.exit() : 프로그램 종료 메서드 
 
 제네릭을 사용하는 가장 큰 이유는 무엇인지 정리
 
-Set의 용도와 주요 클래스 정리
+- 형 변환시에 발생할 수 있는 문제들을 사전에 없애기 위해서 만든 것(사전 : 컴파일)  
+
+Set의 용도와 주요 클래스 정리  
+
+- 용도 : 순서와 상관없이 어떤 데이터가 존재하는지 확인 하는 용도
+- HashSet : 순서 없는 데이터를 해시 테이블에 저장
+- TreeSet : 데이터가 들어올때 마다 정렬되는 Set
 
 Set의 데이터를 하나씩 꺼내는 방법 정리
 
+```
+set.add(1);
+set.add(2);
+set.add(3); // 더하기
+// set.remove(1); // 1뺴기
+// set.clear(); // 전체 비우기
+
+System.out.println(set.toString()); // [1, 2, 3]
+
+Iterator iter = set.iterator();
+while(iter.hasNext()){
+    System.out.print(iter.next() + " "); // 1 2 3
+} // 출력 또는 뺴기
+```
+
 ArrayList와 같은 List와 배열의 차이 무엇인지 정리
+
+- List 는 인터페이스, ArrayList는 List를 구현한 클래스
 
 Queue의 용도는 무엇이며, LinkedList의 특징이 무엇인지 정리
 
+- Queue의 용도 : FIFO 구조, 데이터 입력 순서대로 처리시 사용
+- LinkedList의 특징 : 추가/삽입삭제 용이, 하지만 탐색시에는, 메모리 하나하나 접근해야되서, 탐색 속도가 느림
+
 Map의 용도와 주요 클래스를 정리
+
+- Map의 용도 : 데이터를 키-값 형태로 저장 하는 용도
+- HashMap : 데이터가 많아지면, 초기 크기 지정 하는게 좋음. hashCode(),equal() 메소드를 사용, 값을 찾는다.
+- TreeMap : 정렬된 키의 목록제공 (숫자 > 알파벳 대문자 > 소문자 > 한글)
+- Properties : Map으로 구현한 클래스, HashTable을 확장한 클래스
+- HashTable : Enumeration 객체를 통해, 데이터 처리, 순환하며 데이터 처리 불가능. 처리 도중 삭제 불가능
 
 Array 클래스의 주요 용도는 무엇인지 정리
 
+- 데이터를 순차적으로 저장하는 용도
+
 StringTokenizer 클래스의 용도는 무엇인지 정리
+
+- 특정 문자열을 나눌떄 사용한다.
 
 thread 클래스를 확장한 클래스를 구현할 때 항상 만들어야 하는 메소드는 무엇인가?
 접근제어자, 리턴 타입, 메소드 이름 작성
 
+- 접근제어자 : void
+- 리턴타입 : 없음
+- 메소드 이름 : run
+
 Thread 클래스와 Runnable인터페이스를 구현하여 만든 쓰레드를 실행 하려면  
 각각 어떻게 해야 하는지 정리
 
+- Runnable 인터페이스를 통한 구현
+```
+public class MyRunnable implements Runnable {
+    @Override
+    public void run() {
+        // 스레드로 실행될 코드 작성
+        for (int i = 0; i < 5; i++) {
+            System.out.println("스레드 실행 중: " + i);
+            try {
+                Thread.sleep(1000); // 1초 대기
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        // Runnable 인터페이스를 구현한 객체 생성
+        MyRunnable myRunnable = new MyRunnable();
+        
+        // 스레드 생성
+        Thread thread = new Thread(myRunnable);
+        
+        // 스레드 실행
+        thread.start();
+        
+        // 다른 작업 수행
+        
+        // 스레드가 종료될 때까지 기다림
+        try {
+            thread.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        
+        System.out.println("메인 스레드 종료");
+    }
+}
+```
+
+- Thread 클래스를 통한 구현
+```
+public class MyThread extends Thread {
+    @Override
+    public void run() {
+        // 스레드로 실행될 코드 작성
+        for (int i = 0; i < 5; i++) {
+            System.out.println("스레드 실행 중: " + i);
+            try {
+                Thread.sleep(1000); // 1초 대기
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        // 스레드 생성
+        MyThread myThread = new MyThread();
+        
+        // 스레드 실행
+        myThread.start();
+        
+        // 다른 작업 수행
+        
+        // 스레드가 종료될 때까지 기다림
+        try {
+            myThread.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        
+        System.out.println("메인 스레드 종료");
+    }
+}
+```
+
 Synchronized에 대해서 정리 
+
+- 멀티 쓰레드 환경에서 변수의 동기화를 위해 사용.
+- 메소드를 Synchronized로 선언
+- 메소드의 특정 문장만 Synchronized로 감사는 방법
 
 InputStream 클래스의 용도는 무엇이고, Reader 클래스와 어떤 점이 다른지 정리
 
+- InputStream의 용도 : InputStream 클래스는 바이트 기반의 입력 스트림을 처리하기 위한 추상 클래스
+- Reader 클래스는 문자 기반의 입력 스트림을 처리하기 위한 추상 클래스입니다. Reader 클래스는 문자 단위로 데이터를 읽어들이는 기능을 제공
+- 차이점 : InputStream은 바이트 기반, Reader는 문자 단위로 데이터 처리
+
 클래스 선언시 Serializable을 구현하는 이유는 무엇인지 정리
+
+- 직렬화(Serializable을) : 직렬화는 객체를 바이트 스트림으로 변환
+- 클래스를 다른 서버에 전송 (바이트화된 객체를 서버에 전송 할수 있음)
+- 클래스의 저장 복원 (바이트화된 객체를 다시 읽어 복원 하거나 바이트화된 내용을 저장 할수 있음
+- 클래스의 공유 (복사본이 생성 되지 않은 상태에서 참조 형태로 공유 할수 있음. 메모리 차지X)
 
 transient로 선언한 변수는 다른 변수와 어떻게 다른지 정리
 
+- 직렬화시, 직렬화될 필드 또는 변수를 구분 할수 있음(직렬화 대상 변수에서 제외 시킬수 있음)
+
 TCP 통신을 처리하기 위해서 사용하는 클래스는 무엇인지 정리
 
+- Socket
+
 UDP 통신을 처리하기 위해서 사용하는 클래스는 무엇인지 정리
+
+- DatagramSocket
